fix center alignment of winner announcement text

--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@ h3 { /* game goal */
 
 /* // GAME STYLES // */
 body {
+    background-image: url("images/maze-bkgrnd.png");
     background: white;
    	margin: 0 auto;
 	text-align: center;
@@ -53,6 +54,8 @@ h2 { /* game winner */
 	display: inline-block;
 	z-index: 10;
 	top: 300px;
+	left: 0;
+	width: 100%;
 	font-family: "Bungee Inline", sans-serif;
 	font-size: 75px;
 	color: orange;
